--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="addToCart">Add to Cart</string>
     <string name="removeFromCart">Remove</string>
     <string name="inspect">Inspect</string>
-    <string name="pickCategory">Category</string>
+    <string name="category">Category</string>
     <string name="office">Office</string>
     <string name="casual">Casual</string>
     <string name="enthusiast">Enthusiast</string>
@@ -30,9 +30,23 @@
     <!--meta data-->
     <string name="imgDesc">appIcon</string>
     <string name="title_activity_office_p_c">ScrollingActivity</string>
+    <string name="officeFlavourText">Suitable for business solutions</string>
+    <string name="pickCategory">Pick Your Flavour</string>
+    <string name="specifications">Specifications</string>
     <!--Products text-->
     <string name="officePCs">Office PCs</string>
     <string name="pc1">MSI - Desktop Computer, Mini-Desktop</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_inspect_scroll">ScrollingActivity</string>
+<!--Inspect strings-->
+    <string name="name">Product name: \n</string>
+    <string name="brand">Brand: </string>
+    <string name="cpu">CPU: </string>
+    <string name="ram">RAM: </string>
+    <string name="HDD">HDD: </string>
+    <string name="SSD">SSD: </string>
+    <string name="graphics">Graphics: </string>
+    <string name="os">Operating System: </string>
+
 
 </resources>
