--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,17 +28,23 @@
     <string name="forgotPassText">Forgot your password? Reset here</string>
     <string name="back">Back</string>
     <!--meta data-->
+    <string name="enterQuantity">Enter Quantity</string>
     <string name="imgDesc">appIcon</string>
     <string name="title_activity_office_p_c">ScrollingActivity</string>
     <string name="officeFlavourText">Suitable for business solutions</string>
     <string name="pickCategory">Pick Your Flavour</string>
     <string name="specifications">Specifications</string>
+    <string name="price">Price \n</string>
+    <string name="officePc1Price">$549.99</string>
+    <string name="officePc2Price">$619.99</string>
+    <string name="officePc3Price">$569.99</string>
+
     <!--Products text-->
     <string name="officePCs">Office PCs</string>
     <string name="pc1">MSI - Desktop Computer, Mini-Desktop</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_inspect_scroll">ScrollingActivity</string>
-<!--Inspect strings-->
+    <!--Inspect strings-->
     <string name="name">Product name: \n</string>
     <string name="brand">Brand: \n</string>
     <string name="cpu">CPU: \n</string>
