Finished core features. Adding rest of office products

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="back">Back</string>
     <string name="myCart">My Cart</string>
     <string name="removeProduct">Remove Purchase</string>
+    <string name="confirmPurchase">Confirm Purchase</string>
     <!--meta data-->
     <string name="enterQuantity">Enter Quantity</string>
     <string name="imgDesc">appIcon</string>
@@ -41,9 +42,10 @@
     <string name="officePc2Price">$619.99</string>
     <string name="officePc3Price">$569.99</string>
     <string name="enterPurchaseId">Enter Purchase ID</string>
+    <string name="total">Total</string>
+    <string name="forGuest">So we can get you your order</string>
     <!--Products text-->
     <string name="officePCs">Office PCs</string>
-    <string name="pc1">MSI - Desktop Computer, Mini-Desktop</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_inspect_scroll">ScrollingActivity</string>
     <!--Inspect strings-->
@@ -55,6 +57,10 @@
     <string name="SSD">SSD: \n</string>
     <string name="graphics">Graphics: \n</string>
     <string name="os">Operating System: \n</string>
+    <!--Office PC names-->
+    <string name="pc1">MSI - Desktop Computer, Mini-Desktop</string>
+    <string name="pc2">Dell OptiPlex - Desktop Computer</string>
+    <string name="pc3">HP Default - Desktop</string>
 
 
 </resources>
