--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,11 +35,13 @@
     <string name="imgDesc">appIcon</string>
     <string name="title_activity_office_p_c">ScrollingActivity</string>
     <string name="officeFlavourText">Suitable for business solutions</string>
-    <string name="casualFlavourText">Jack Of All Trades</string>
+    <string name="casualFlavourText">If you\'re looking for a jack of all trades</string>
+    <string name="enthusiastFlavourText">For the insane ones</string>
     <string name="pickCategory">Pick Your Flavour</string>
     <string name="specifications">Specifications</string>
     <string name="price">Price \n</string>
     <string name="casualPCs">Casual PCs</string>
+    <string name="enthusiastPCs">Enthusiast PCs</string>
 
     <string name="enterPurchaseId">Enter Purchase ID</string>
     <string name="total">Total</string>
@@ -71,6 +73,18 @@
     <string name="casualPc2Price">$1049.99</string>
     <string name="pc6">Dell - G5 5000 Gaming Desktop</string>
     <string name="casualPc3Price">$1199.99</string>
+
+    <string name="pc7">CLX Uprising Gaming Desktop</string>
+    <string name="enthPc1Price">$1939.99</string>
+    <string name="pc8">CyberPowerPC - Gamer Supreme Gaming Desktop</string>
+    <string name="enthPc2Price">$1939.99</string>
+    <string name="pc9">CLX Revo Gaming Desktop</string>
+    <string name="enthPc3Price">$3149.99</string>
+
+    <string name="title_activity_casual_p_c">ScrollingActivity</string>
+    <string name="title_activity_enthusiast_p_c">ScrollingActivity</string>
+
+
 
 
 </resources>
